# $Id: HISTORY,v 1.3 2002/09/17 15:45:41 sergeyli Exp $
2002-09-16 Sergey Lipnevich <sergeyli@pisem.net>

	Converted spell to use cvs:// URLs supported by sorcery.

2002-09-05 Sergey Lipnevich <sergeyli@pisem.net>

	No need to check out httpd-ldap separately because it is now
	added to modules/experimental. Doesn't apper to generate the
	module itself now, so more changes are anticipated on LDAP
	support.

2002-08-02 Sergey Lipnevich <sergeyli@pisem.net>

	Spell created.