@@ -1,12 +1,12 @@
-# $Id: DETAILS,v 1.4 2002/10/05 22:26:02 sergeyli Exp $
+# $Id: DETAILS,v 1.5 2002/10/08 22:14:06 sergeyli Exp $
            SPELL=httpd-dev
          VERSION=APACHE_2_0_43
           SOURCE=$SPELL-$VERSION.tar.bz2
-          MD5[0]=
+          MD5[0]=59978d46c2205103353c4125c24563a7
          SOURCE2=$SPELL-apr-$VERSION.tar.bz2
-          MD5[1]=
+          MD5[1]=886d2d75780a8e1e7cad0d630bcad2a6
          SOURCE3=$SPELL-apr-util-$VERSION.tar.bz2
-          MD5[2]=
+          MD5[2]=0ea79d865bdc9b7b6854376627790b82
 SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-$VERSION
    SOURCE_URL[0]=cvs://:pserver:anoncvs@cvs.apache.org:/home/cvspublic:httpd-2.0:$VERSION
   SOURCE2_URL[0]=cvs://:pserver:anoncvs@cvs.apache.org:/home/cvspublic:apr:$VERSION
