@@ -1,4 +1,10 @@
-# $Id: HISTORY,v 1.3 2002/09/17 15:45:41 sergeyli Exp $
+# $Id: HISTORY,v 1.4 2002/10/08 22:14:06 sergeyli Exp $
+2002-10-08 Sergey Lipnevich <sergeyli@pisem.net>
+
+	Rewritten mksscert.sh to generate valid certificates
+	for CA (self-signed) and for the server (signed by CA).
+	Upgraded to APACHE_2_0_43 with checksums.
+
 2002-09-16 Sergey Lipnevich <sergeyli@pisem.net>
 
 	Converted spell to use cvs:// URLs supported by sorcery.
